feat: added last code block parsed on error